# codex-vibekit

./: .gitignore  MANIFEST.in  README.ko.md  README.md  SPEC-0001-codex-vibekit-light.md  pyproject.toml  setup.cfg  thread-character-and-skills-light.md
src/codex_vibekit/: cli.py  codex_setup.py  scaffold.py  system_check.py
src/codex_vibekit/assets/scaffold/: AGENTS.md  PROJECT_HUB.md
src/codex_vibekit/assets/scaffold/docs/templates/: TEMPLATE-ADR.md  TEMPLATE-SPEC.md  TEMPLATE-WORKLOG.md
src/codex_vibekit/assets/scaffold/skills/builder/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/builder/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/critic/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/critic/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/orchestrator/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/orchestrator/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/planner/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/planner/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/techniques/brainstorming/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/techniques/brainstorming/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/techniques/korean-humanizer/: SKILL.md
src/codex_vibekit/assets/scaffold/skills/techniques/korean-humanizer/agents/: openai.yaml
src/codex_vibekit/assets/scaffold/skills/techniques/korean-humanizer/references/: patterns.md
src/codex_vibekit/assets/scaffold/skills/techniques/web-motion-polish/: SKILL.md
(+1 files in other folders)
