[metadata]
name = codex-vibekit
version = 0.1.0
description = Lightweight scaffolding injector for Codex vibe-coding projects.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    codex-vibekit = codex_vibekit.cli:main

